<resources>
    <string name="share_with" translatable="false">Share with</string>
    <string name="app_name" translatable="false">Charging Animation</string>
    <string name="charging_nanimation2" translatable="false">Charging Animation</string>
    <string name="charging2" translatable="false">Charging</string>
    <string name="animation2" translatable="false">Animation</string>
    <string name="charging_animation">Charging Animation</string>
    <string name="turn_battery_service">Turn Battery Service</string>
    <string name="charging_nanimation">Charging\nAnimation</string>
    <string name="device_ninformation">Device\nInformation</string>
    <string name="battery_ninformation">Battery\nInformation</string>
    <string name="animation_ndownload">Animation\nDownload</string>
    <string name="alarm">Alarm</string>
    <string name="select_ringtones">Select Ringtones</string>
    <string name="none">None</string>
    <string name="settings">Settings</string>
    <string name="enable_animation">Enable Animation</string>
    <string name="height_battery_percentage">Height Battery Percentage</string>
    <string name="keep_service_always_alive">Keep Service Always Alive</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="battery_information">Battery Information</string>
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="battery_status">Battery Status</string>
    <string name="technology">Technology</string>
    <string name="capacity">Capacity</string>
    <string name="charging_type">Charging Type</string>
    <string name="device_information">Device Information</string>
    <string name="user_s_nphone">User’s\nPhone</string>
    <string name="enable_alarm_on_full_battery">Enable Alarm on Full Battery</string>
    <string name="turn">Turn</string>
    <string name="select">Select</string>
    <string name="please_send_us_some_feedback">Please send us some feedback!</string>
    <string name="disable">Disable</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="please">Please write…</string>
    <string name="send">Send</string>
    <string name="tv_rating_title_0">Your Opinion Matter To Us!</string>
    <string name="button_rating_none">Rate us</string>
    <string name="button_rating_done">Thank you!</string>
    <string name="button_rating_not">Not now</string>
    <string name="Please_feedback">Please feedback</string>
    <string name="exit">You want to exit the app</string>
    <string name="btnCanse">Cancel</string>
    <string name="btnYes">Yes</string>
    <string name="discard">Discard</string>
    <string name="for_android">For Android</string>
    <string name="version">Version</string>
    <string name="privacy_policy_under"><u>Privacy Policy</u></string>
    <string name="animation">Animation</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="apply_animation">Apply Animation</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="select_animation_time_duration">Select Animation Time Duration</string>
    <string name="_5_seconds">5 seconds</string>
    <string name="_10_seconds">10 seconds</string>
    <string name="_15_seconds">15 seconds</string>
    <string name="_20_seconds">20 seconds</string>
    <string name="_25_seconds">25 seconds</string>
    <string name="_30_seconds">30 seconds</string>
    <string name="not_now">Not now</string>
    <string name="submit">Submit</string>
    <string name="single_tap_to_hide">Single Tap To Hide</string>
    <string name="double_tap_to_hide">Double Tap To Hide</string>
    <string name="hide_every_1_minute">Hide Every 1 Minute</string>
    <string name="hide_every_2_minutes">Hide Every 2 Minutes</string>
    <string name="good">Good</string>
    <string name="low">Low</string>
    <string name="waring">Waring</string>
    <string name="next">Next</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="this_action_can_contain_ads">This action can contain ads...</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="intro_1">Personalize your charging screen with \na cool animation.</string>
    <string name="tutorial_title_1">Animation Screen.</string>
    <string name="charging_nalarm">Charging Alarm.</string>
    <string name="the_ninfo">The Info.</string>
    <string name="intro_2">Receive alerts when your phone\'s battery is fully charged, as well as when it is low.</string>
    <string name="intro_3">Mobile, device, battery Information can be seen.</string>
    <string name="ringtone">Ringtone</string>
    <string name="add_gif">Add Gif</string>
    <string name="from_animation">From Animation</string>
    <string name="from_device_library">From Device Library</string>
    <string name="view_ads_will_be_saved_charging_animation_nwallpaper_and_that_is_the_bonus_for_our_author_n_nview_now">View ads will be saved charging animation \nwallpaper and that is the bonus for our author.</string>
    <string name="view2">View now?</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="no_gif">No GIF</string>
    <string name="press">Press “+” button to add new alarm.</string>
    <string name="downloaded">Download Animation</string>
    <string name="downloaded_success">Download Success</string>
    <string name="loading">Loading</string>
    <string name="downloaded_fail">Downloaded Fail</string>
    <string name="sdk">Sdk</string>
    <string name="device">Device</string>
    <string name="model">Model</string>
    <string name="product">Product</string>
    <string name="broad">Broad</string>
    <string name="boot_loader">Boot Loader</string>
    <string name="Branch">Brand</string>
    <string name="cpu">Cpu abi</string>
    <string name="cpu2">Cpu abi2</string>
    <string name="display">Display</string>
    <string name="Hardware">Hardware</string>
    <string name="host">Host</string>
    <string name="id">Id</string>
    <string name="manufacture">Manufacture</string>
    <string name="Radio">Radio</string>
    <string name="Tags">Tags</string>
    <string name="Time">Time</string>
    <string name="Type">Type</string>
    <string name="User">User</string>
    <string name="christmas">Christmas</string>
    <string name="emoji">Emoji</string>
    <string name="animal">Animal</string>
    <string name="diamond">Diamond</string>
    <string name="heroes">Heroes</string>
    <string name="square">Square</string>
    <string name="food">Food</string>
    <string name="exit2" translatable="false"> press twice to exit</string>
    <string name="error">An error has occurred</string>
    <string name="animation_content">Animation Content</string>
    <string name="minute_1">1 minute</string>
    <string name="always">Always</string>
    <string name="circle">Circle</string>
    <string name="downing">Please wait for the download to finish</string>
    <string name="no_gif2">No GIF</string>
    <string name="press_button_to_download_new_animation">Press button to download new animation.</string>
    <string name="more">MORE</string>
    <string name="recently_download">Recently Download</string>
    <string name="added_from_library">Added from Library</string>
    <string name="charging">Charging</string>
    <string name="battery">Battery</string>
    <string name="staer">Get started!</string>
    <string name="tv_rating_content_1">If you enjoy this Charging Animation, would you \nmind rating us on the Google Play, then?</string>
    <string name="christmas2">Christmas Animation</string>
    <string name="emoji2">Emoji Animation</string>
    <string name="animal2">Animal Animation</string>
    <string name="diamond2">Diamond Animation</string>
    <string name="heroes2">Heroes Animation</string>
    <string name="square2">Square Animation</string>
    <string name="food2">Food Animation</string>
    <string name="circle2">Circle Animation</string>
    <string name="down_not">The current version does not support download</string>
    <string name="custom_nanimation">Custom\nAnimation</string>
    <string name="downloaded2">Download</string>
    <string name="customed">Customed</string>
    <string name="custom_nanimation2">Custom Animation</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="exit3">Exit</string>
    <string name="heart">Heart</string>
    <string name="heart2">Heart Animation</string>
    <string name="gallery_animations">Gallery Animations</string>
    <string name="gallery_animations2">Gallery \nAnimations</string>
    <string name="charging_animation_requires_permission_to_use_the_storage_and_screen_permissions">Allow Charging Animation to access \ndevice storage</string>
    <string name="permission">Permission</string>
    <string name="go">Go</string>
    <string name="storage">Storage</string>
    <string name="screen_permission">Screen Permission</string>
    <string name="you_have_set_up_successfully">You have set up successfully.\nEnable overlay permission to use\nscreen lock feature.</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="do_you_want_to_access_the_application_when_granting_permission_some_functions_may_not_work">Do you want to access the application when granting permission, some functions may not work</string>
    <string name="later">Later</string>
    <string name="allow">Allow</string>
    <string name="enable_permission">You must allow this permission to use our features</string>
    <string name="permission_is_not_allowed">Permission is not allowed</string>
    <string name="continue2">Continue</string>
    <string name="customize">Customize</string>
    <string name="custom_now">Custom Now</string>
    <string name="recommend">Recommend</string>
    <string name="all">All</string>
    <string name="anime">Anime</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="low_battery_below_20">Low battery below 20%</string>
    <string name="high_temperature">High temperature</string>
    <string name="preview">Preview</string>
    <string name="download_animation">Download Animation</string>
    <string name="hide_every_3_minutes">Hide Every 3 Minutes</string>
    <string name="info_battery">Info Battery</string>
    <string name="info_device">Info Device</string>
    <string name="full_charging_tap_to_stop_ringtone">Full charging, tap to stop ringtone</string>
    <string name="battery_remaining_less_than_20_tap_to_stop_ringtone">Battery remaining less than 20%, tap to stop ringtone</string>
    <string name="temperature_greater_than_60_degrees_celsius_tap_to_stop_ringtone">Temperature greater than 60 degrees Celsius, tap to stop ringtone</string>
    <string name="no_data">No Data</string>
    <string name="you_haven_t_customed_any_animations_yet_let_s_find_more">You haven\'t customed any animations yet! Let\'s find more!</string>
    <string name="custom_animation">Custom Animation</string>
    <string name="find_animation">Find Animation</string>
    <string name="you_haven_t_downloaded_any_animations_yet_let_s_find_more">You haven\'t downloaded any animations yet! Let\'s find more!</string>
    <string name="set_animation_successfully">Set animation successfully !</string>
    <string name="info">Info</string>
    <string name="explore_more_animation">Explore more Animation</string>
    <string name="your_animation_has_been_set_successfully">Your animation has been set successfully!</string>
    <string name="congratulations">Congratulations!</string>
</resources>