<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_090327"
    tools:context=".fragment.alarm.AlarmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgCycle"
            android:layout_width="@dimen/_194sdp"
            android:layout_height="@dimen/_194sdp"
            android:layout_marginTop="@dimen/_23sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_112sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imgCycle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgCycle" />


        <LinearLayout
            android:id="@+id/tvPinInfo"
            android:layout_width="@dimen/_68sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView12">

            <LinearLayout
                android:id="@+id/imgPin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="bottom"
                android:background="@drawable/battery_bg_batter_info_1"
                android:orientation="horizontal" />
        </LinearLayout>

        <com.charging.animation.mobile.battery.custom.view.CustomTextView
            android:id="@+id/tvPin3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="90%"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPinInfo"
            app:layout_constraintEnd_toEndOf="@+id/tvPinInfo"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/tvPinInfo" />


        <ImageView
            android:id="@+id/connect"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_84sdp"
            android:layout_marginTop="@dimen/_minus12sdp"
            app:layout_constraintEnd_toEndOf="@+id/tvPinInfo"
            app:layout_constraintStart_toStartOf="@+id/tvPinInfo"
            app:layout_constraintTop_toBottomOf="@+id/tvPin3" />

        <ImageView
            android:id="@+id/iv_Ring_Battery"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="@id/imageView12"
            app:layout_constraintTop_toTopOf="@id/imageView12"
            android:layout_marginTop="-30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_100sdp"

        android:paddingTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_Battery"
        tools:context=".fragment.alarm.AlarmFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/setting_bg_item"
            tools:context=".fragment.alarm.AlarmFragment">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gr_alarm_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:minLines="1"
                        android:text="@string/enable_alarm_on_full_battery"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imgServiceFull"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgServiceFull"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_switch_on"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gr_alarm_2"
                    android:layout_marginTop="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:minLines="1"
                        android:layout_marginEnd="10dp"
                        android:text="@string/low_battery_below_20"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imgLow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_switch_on"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gr_alarm_3"
                    android:layout_width="match_parent"
                    android:layout_marginTop="18dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:minLines="1"
                        android:text="@string/high_temperature"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imgHigh"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_switch_on"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/gr_alarm_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:clipToPadding="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gr_alarm_1">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:minLines="1"
                        android:text="@string/select_ringtones"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintBottom_toTopOf="@id/tvNameRing"
                        app:layout_constraintEnd_toStartOf="@+id/imgService"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvNameRing"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:ellipsize="end"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:minLines="1"
                        android:text="@string/none"
                        android:textColor="#ABACAF"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <ImageView
                        android:id="@+id/imgService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right"
                        app:layout_constraintBottom_toBottomOf="@+id/tvNameRing"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>